--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  background-color: #111;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  color: #fff;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav {
+  position: fixed;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 0 30px;
+  height: 60px;
+  z-index: 1;
+  transition: all 0.5s ease-in;
+}
+.nav_black {
+  background-color: #111;
+}
+.nav_logo {
+  left: 30px;
+  width: 120px;
+  object-fit: contain;
+}
+.nav_avatar {
+  width: 30px;
+  object-fit: contain;
 }
 
-.App-link {
-  color: #61dafb;
+.row {
+  margin-left: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row_posters {
+  display: flex;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  padding: 20px;
+}
+.row_posters::-webkit-scrollbar {
+  display: none;
+}
+.row__poster {
+  margin-left: 10px;
+  width: 100%;
+  object-fit: contain;
+  max-height: 100px;
+  cursor: pointer;
+  transition: transform 550ms;
+}
+.row__posterLarge {
+  max-height: 250px;
+}
+.row__posterLarge:hover {
+  transform: scale(1.09);
+}
+.row__poster:hover {
+  transform: scale(1.08);
+}
+.banner {
+  height: 448px;
+  object-fit: contain;
+}
+.banner-content {
+  height: 330px;
+  margin-left: 30px;
+  padding-top: 140px;
+}
+.banner_title {
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 0.3rem;
+}
+.banner_desc {
+  font-size: 1rem;
+  line-height: 1.3;
+  padding-top: 1rem;
+  width: 45rem;
+  max-width: 360px;
+  height: 80px;
+}
+.banner_button {
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 700;
+  border-radius: 0.2vw;
+  padding: 0.5rem 2rem;
+  margin-right: 1rem;
+  background-color: rgba(51, 51, 51, 0.5);
+}
+.banner_button:hover {
+  color: #000;
+  background-color: #fff;
+  transition: all 0.2s;
+}
+.faded-bottom {
+  height: 7.4rem;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37, 37, 37, 0.6),
+    #111
+  );
 }
